fixed styling for editor

--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1,10 +1,15 @@
 .container {
   background-color: #30353e;
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
 }
 .main {
+  flex: 1 1 auto;
   display: flex;
   flex-direction: row;
-  height: 100vh;
+  height: max-content;
 }
 
 .left {
@@ -17,5 +22,5 @@
 }
 
 .header {
-  height: 3em;
+  flex: 0 0 3em
 }
